--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP2</title>
     <link rel="stylesheet" href="./estilos/general.css">
-    <link rel="stylesheet" href="./estilos/index.css">
+    <link rel="stylesheet" href="./estilos/404.css">
     <link rel="icon" href="./img/favicon.png">
 </head>
 <body>
@@ -28,21 +28,19 @@
 </nav>
 </header>
 <main>
-    <section>
-        <article id="secposter">
-        <img src="img/poster.jpg"alt="poster" class="poster">
+    <section id="caja">
+        <article>
+            <img src="./img/contramano.png" class="cartel" alt="cartel" width="100">
         </article>
-        <article id="sectexto">
-        <p class="titulo">Ford v Ferrari las leyendas de Le Mans</p>
-        <div class="ti">
-        <p>“Ford v Ferrari” es una película de drama y acción inspirada en hechos reales.
-        Nos cuenta la historia de Carroll Shelby, un ingenioso diseñador de autos, y Ken Miles, un piloto tan talentoso como rebelde.</p>
-        <p>Juntos aceptan el desafío de construir un coche para que Ford compita contra el poder absoluto de Ferrari en las 24 Horas de Le Mans de 1966.
-        Más allá de la velocidad y la adrenalina, la película muestra una intensa combinación de amistad, rivalidad y pasión por superar los límites.</p>
-        </div>
+        <article>
+            <div>
+                <p>Oopsss... parece que vas en contramano.</p>
+                <p>No encontramos la ruta que buscabas.</p>
+                <br>
+                <a href="./index.html">VOLVER AL INICIO</a>
+            </div>
         </article>
     </section>
-
 </main>
 <footer>
     <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
