--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -3,32 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tp1</title>
+    <title>TP2</title>
     <link rel="stylesheet" href="../estilos/general.css">
     <link rel="stylesheet" href="../estilos/produccion.css">
+    <link rel="icon" href="../img/favicon.png">
 </head>
 <body>
 <header>
-    <div 
-    class="banner">
-    <h1><a href="../index.html" class="ford">Ford</a>
-    <a href="../index.html" class="v">V</a>
-    <a href="../index.html" class="ferrari">Ferrari</a></h1>
-    </div>
+    <article id="banner">
+        <h1>
+        <a href="../index.html" class="ford">Ford</a>
+        <a href="../index.html" class="v">V</a>
+        <a href="../index.html" class="ferrari">Ferrari</a>
+        </h1>
+    </article>
 <nav>
-    <a href="../pages/sinopsis.html"class="sub">Sinopsis</a>
-    <a href="../pages/reparto.html"class="sub">Reparto</a>
-    <a href="../pages/produccion.html"class="subactivo">Produccion</a>
-    <a href="../pages/datos.html"class="sub">Datos</a>
-    <a href="../pages/contacto.html"class="sub">Contacto</a>
+    <section id="sub">
+        <a href="../pages/sinopsis.html">Sinopsis</a>
+        <a href="../pages/reparto.html">Reparto</a>
+        <a href="../pages/produccion.html"class="subactivo">Produccion</a>
+        <a href="../pages/datos.html">Datos</a>
+        <a href="../pages/contacto.html">Contacto</a>
+    </section>
 </nav>
 </header>
 <main>
 <h3 class="produccion">PRODUCCION</h3>
-<div class="productoras">
-<img src="../img/20-century-fox-antiguojpg.webp" alt="20th Century Fox" class="prod">
-<img src="../img/Chernin_Entertainment.svg" alt="Chernin Entertainment" class="prod">
-</div>
+<section id="productoras">
+    <article>
+        <a href="https://en.wikipedia.org/wiki/20th_Century_Studios" target="_blank">
+            <img src="../img/20-century-fox-antiguojpg.webp" alt="20th Century Fox" class="prod">
+        </a>
+    </article>
+    <article>
+        <a href="https://es.wikipedia.org/wiki/Chernin_Entertainment" target="_blank">
+            <img src="../img/Chernin_Entertainment.svg" alt="Chernin Entertainment" class="prod">
+        </a>
+        
+    </article>
+</section>
 <div class="produtext">
 <p>La producción estuvo a cargo de 20th Century Fox, uno de los estudios más prestigiosos de Hollywood. Se trató de una de las últimas superproducciones realizadas bajo este sello antes de su integración a Disney, lo que le otorgó un valor histórico adicional.</p>
 <p>También participó Chernin Entertainment, la productora de Peter Chernin, que contribuyó en el desarrollo creativo y en la organización del proyecto. La combinación de la infraestructura de un gran estudio como Fox con el respaldo de una productora independiente permitió lograr una película de gran escala sin perder el cuidado en los detalles narrativos y visuales.</p>
@@ -39,7 +52,7 @@
 </div>
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 1 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
 </footer>
 </body>
 </html>
