--- a/pages/reparto.html
+++ b/pages/reparto.html
@@ -3,57 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tp1</title>
+    <title>TP2</title>
     <link rel="stylesheet" href="../estilos/general.css">
     <link rel="stylesheet" href="../estilos/reparto.css">
+    <link rel="icon" href="../img/favicon.png">
 </head>
 <body>
 <header>
-    <div 
-    class="banner">
-    <h1><a href="../index.html" class="ford">Ford</a>
-    <a href="../index.html" class="v">V</a>
-    <a href="../index.html" class="ferrari">Ferrari</a></h1>
-    </div>
+    <article id="banner">
+        <h1>
+        <a href="../index.html" class="ford">Ford</a>
+        <a href="../index.html" class="v">V</a>
+        <a href="../index.html" class="ferrari">Ferrari</a>
+        </h1>
+    </article>
 <nav>
-    <a href="../pages/sinopsis.html"class="sub">Sinopsis</a>
-    <a href="../pages/reparto.html"class="subactivo">Reparto</a>
-    <a href="../pages/produccion.html"class="sub">Produccion</a>
-    <a href="../pages/datos.html"class="sub">Datos</a>
-    <a href="../pages/contacto.html"class="sub">Contacto</a>
+    <section id="sub">
+        <a href="../pages/sinopsis.html">Sinopsis</a>
+        <a href="../pages/reparto.html"class="subactivo">Reparto</a>
+        <a href="../pages/produccion.html">Produccion</a>
+        <a href="../pages/datos.html">Datos</a>
+        <a href="../pages/contacto.html">Contacto</a>
+    </section>
 </nav>
 </header>
 <main>
-<div class="actores">
-<img src="../img/matt damon.jpg" alt="Matt Damon" class="mta">
-<img src="../img/christian_bale.jpg" alt="Christian Bale" class="mta">
-<img src="../img/tracy_letts.jpg" alt="Tracy Letts" class="mta">
-<img src="../img/remo_girone.jpg" alt="Remo Girone" class="mta">
-<img src="../img/caitriona_balfe.jpg" alt="Caitriona Balfe" class="mta">
-</div>
-<div class="a1">
-<h4>Matt Damon (Carroll Shelby)</h4>
-<p>Interpreta al ex piloto convertido en diseñador y constructor de autos. Es quien lidera el proyecto del Ford GT40 y actúa como puente entre la empresa y el piloto Ken Miles.</p>
-</div>
-<div class="a2">
-<h4>Christian Bale (Ken Miles)</h4>
-<p>Da vida al talentoso y temperamental piloto británico. Su carácter rebelde y su habilidad al volante son fundamentales para llevar a Ford a competir contra Ferrari.</p>
-</div>
-<div class="a3">
-<h4>Tracy Letts (Henry Ford II)</h4>
-<p>Interpreta al nieto del fundador de Ford. Es el impulsor de la idea de desafiar a Ferrari en Le Mans para revitalizar la imagen de su compañía.</p>
-</div>
-<div class="a4">
-<h4>Remo Girone (Enzo Ferrari)</h4>
-<p>Da vida al legendario fundador de Ferrari. Representa el rival a vencer: el símbolo de la excelencia y el orgullo italiano en el mundo del automovilismo.</p>
-</div>
-<div class="a5">
-<h4>Caitriona Balfe (Mollie Miles)</h4>
-<p>Encarna a la esposa de Ken Miles. Su papel muestra el costado humano de la historia, acompañando y apoyando a su marido en medio de las tensiones y riesgos de las carreras.</p>
-</div>
+    <section id="cuadros">
+    <article class="card">
+        <a href="https://es.wikipedia.org/wiki/Matt_Damon" target="_blank">
+            <img src="../img/matt damon.jpg" alt="Matt Damon" class="mta">
+        </a>
+        <h4>Matt Damon (Carroll Shelby)</h4>
+        <p>Interpreta al ex piloto convertido en diseñador y constructor de autos. 
+            Es quien lidera el proyecto del Ford GT40 y actúa como puente entre la empresa y el piloto Ken Miles.</p>
+    </article>
+    <article class="card">
+        <a href="https://es.wikipedia.org/wiki/Christian_Bale" target="_blank">
+           <img src="../img/christian_bale.jpg" alt="Christian Bale" class="mta"> 
+        </a>
+        <h4>Christian Bale (Ken Miles)</h4>
+        <p>Da vida al talentoso y temperamental piloto británico. Su carácter rebelde y su habilidad 
+            al volante son fundamentales para llevar a Ford a competir contra Ferrari.</p>
+    </article>
+    <article class="card">
+        <a href="https://es.wikipedia.org/wiki/Tracy_Letts" target="_blank">
+            <img src="../img/tracy_letts.jpg" alt="Tracy Letts" class="mta">
+        </a>
+        <h4>Tracy Letts (Henry Ford II)</h4>
+        <p>Interpreta al nieto del fundador de Ford. Es el impulsor de la idea de desafiar a Ferrari en Le Mans 
+            para revitalizar la imagen de su compañía.</p>
+    </article>
+    <article class="card">
+        <a href="https://es.wikipedia.org/wiki/Remo_Girone" target="_blank">
+            <img src="../img/remo_girone.jpg" alt="Remo Girone" class="mta">
+        </a>
+        <h4>Remo Girone (Enzo Ferrari)</h4>
+        <p>Da vida al legendario fundador de Ferrari. Representa el rival a vencer: el símbolo de la excelencia y el orgullo
+             italiano en el mundo del automovilismo.</p>
+    </article>
+    <article class="card">
+        <a href="https://es.wikipedia.org/wiki/Caitriona_Balfe" target="_blank">
+            <img src="../img/caitriona_balfe.jpg" alt="Caitriona Balfe" class="mta">
+        </a>
+       <h4>Caitriona Balfe (Mollie Miles)</h4>
+        <p>Encarna a la esposa de Ken Miles. Su papel muestra el costado humano de la historia, acompañando y apoyando a su marido en medio 
+            de las tensiones y riesgos de las carreras.</p> 
+    </article>
+    </section>
+
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 1 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
 </footer>
 </body>
 </html>
