--- a/pages/sinopsis.html
+++ b/pages/sinopsis.html
@@ -3,24 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tp1</title>
+    <title>TP2</title>
     <link rel="stylesheet" href="../estilos/general.css">
     <link rel="stylesheet" href="../estilos/sinopsis.css">
+    <link rel="icon" href="../img/favicon.png">
 </head>
 <body>
 <header>
-    <div 
-    class="banner">
-    <h1><a href="../index.html" class="ford">Ford</a>
-    <a href="../index.html" class="v">V</a>
-    <a href="../index.html" class="ferrari">Ferrari</a></h1>
-    </div>
+    <article id="banner">
+        <h1>
+        <a href="../index.html" class="ford">Ford</a>
+        <a href="../index.html" class="v">V</a>
+        <a href="../index.html" class="ferrari">Ferrari</a>
+        </h1>
+    </article>
 <nav>
-    <a href="../pages/sinopsis.html"class="subactivo">Sinopsis</a>
-    <a href="../pages/reparto.html"class="sub">Reparto</a>
-    <a href="../pages/produccion.html"class="sub">Produccion</a>
-    <a href="../pages/datos.html"class="sub">Datos</a>
-    <a href="../pages/contacto.html"class="sub">Contacto</a>
+    <section id="sub">
+        <a href="../pages/sinopsis.html"class="subactivo">Sinopsis</a>
+        <a href="../pages/reparto.html">Reparto</a>
+        <a href="../pages/produccion.html">Produccion</a>
+        <a href="../pages/datos.html">Datos</a>
+        <a href="../pages/contacto.html">Contacto</a>
+    </section>
 </nav>
 </header>
 <main>
@@ -33,7 +37,7 @@
 </div>
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 1 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
 </footer>
 </body>
 </html>
