--- a/404.html
+++ b/404.html
@@ -28,18 +28,20 @@
 </nav>
 </header>
 <main>
-    <section id="caja">
-        <article>
-            <img src="./img/contramano.png" class="cartel" alt="cartel" width="100">
-        </article>
-        <article>
-            <div>
-                <p>Oopsss... parece que vas en contramano.</p>
-                <p>No encontramos la ruta que buscabas.</p>
-                <br>
-                <a href="./index.html">VOLVER AL INICIO</a>
-            </div>
-        </article>
+    <section id="pag">
+        <section id="caja">
+            <article>
+                <img src="./img/contramano.png" class="cartel" alt="cartel" width="100">
+            </article>
+            <article>
+                <div>
+                    <p>Oopsss... parece que vas en contramano.</p>
+                    <p>No encontramos la ruta que buscabas.</p>
+                    <br>
+                    <a href="./index.html" class="vi">VOLVER AL INICIO</a>
+                </div>
+            </article>
+        </section>
     </section>
 </main>
 <footer>
