--- a/404.html
+++ b/404.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP2</title>
-    <link rel="stylesheet" href="./estilos/general.css">
-    <link rel="stylesheet" href="./estilos/404.css">
+    <link rel="stylesheet" href="/estilos/general.css">
+    <link rel="stylesheet" href="/estilos/404.css">
     <link rel="icon" href="./img/favicon.png">
 </head>
 <body>
@@ -48,4 +48,5 @@
     <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
 </footer>
 </body>
+
 </html>
