--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -32,8 +32,11 @@
         <h1>GRACIAS POR TU COMENTARIO!!</h1>
         <br>
         <h2>Como recompensa desbloqueaste contenido oculto, disfruta</h2>
-        <article>
-        </article>
+
+            <iframe src="https://drive.google.com/file/d/1MeF-a7DEKk3b1-9ZOA3eev-aPR2_Qr9x/preview" width="400vw" height="400vw" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/17MkNrhDgliMcxQgWEkv-mMJnuDH69izU/preview" width="400vw" height="400vw" allow="autoplay"></iframe>
+            <iframe src="https://drive.google.com/file/d/1jylVtqw8PV4ajUPZJ0GeJ26LPMCVMNOr/preview" width="400vw" height="400vw" allow="autoplay"></iframe>
+
     </section>
 </main>
 <footer>
