--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -42,7 +42,7 @@
     <a href="https://www.youtube.com/watch?v=zyYgDtY2AMY" target="_blank"><i class="fab fa-youtube icon"></i></a>
   </li>
 </ul>
-    <form action="../pages/gracias.html" method="post" class="formulario">
+    <form action="../pages/gracias.html" method="get" class="formulario">
         <article id="entrada">
             <div>
                 <label for="nombre">Nombre:</label>
@@ -74,4 +74,5 @@
     <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
 </footer>
 </body>
+
 </html>
