--- a/404.html
+++ b/404.html
@@ -12,9 +12,9 @@
 <header>
     <article id="banner">
         <h1>
-        <a href="index.html" class="ford">Ford</a>
-        <a href="index.html" class="v">V</a>
-        <a href="index.html" class="ferrari">Ferrari</a>
+        <a href="/index.html" class="ford">Ford</a>
+        <a href="/index.html" class="v">V</a>
+        <a href="/index.html" class="ferrari">Ferrari</a>
         </h1>
     </article>
 <nav>
@@ -50,3 +50,4 @@
 </body>
 
 </html>
+
