--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -46,21 +46,21 @@
         <article id="entrada">
             <div>
                 <label for="nombre">Nombre:</label>
-                <input type="text" placeholder="Ingrese nombre..." required>
+                <input id="nombre" name="nombre" type="text" placeholder="Ingrese nombre..." required>
             </div>
             <div>
                 <label for="apellido">Apellido:</label>
-                <input type="text" placeholder="Ingrese apellido..." required>
+                <input id="apellido" name="apellido" type="text" placeholder="Ingrese apellido..." required>
             </div>
             <div>
                 <label for="email">Email:</label>
-                <input type="email" placeholder="correo@ejemplo.com" required>
+                <input id="email" name="email" type="email" placeholder="correo@ejemplo.com" required>
             </div> 
         </article>
         <article id="mensaje">
             <div>
                 <label for="mensaje">Mensaje:</label>
-                <input type="text" placeholder="Deje su comentario..." required>
+                <textarea id="mensaje" name="mensaje" placeholder="Deje su comentario..." required></textarea>
             </div>
         </article>
         <article id="accion">
