--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -33,10 +33,11 @@
         <br>
         <h2>Como recompensa desbloqueaste contenido oculto, disfruta</h2>
 
-            <iframe src="https://drive.google.com/file/d/1MeF-a7DEKk3b1-9ZOA3eev-aPR2_Qr9x/preview" width="350vw" height="350vw" allow="autoplay"></iframe>
-            <iframe src="https://drive.google.com/file/d/17MkNrhDgliMcxQgWEkv-mMJnuDH69izU/preview" width="350vw" height="350vw" allow="autoplay"></iframe>
-            <iframe src="https://drive.google.com/file/d/1jylVtqw8PV4ajUPZJ0GeJ26LPMCVMNOr/preview" width="350vw" height="350vw" allow="autoplay"></iframe>
-
+        <div class="grid-media">
+            <iframe title="Contenido oculto 1" src="https://drive.google.com/file/d/1MeF-a7DEKk3b1-9ZOA3eev-aPR2_Qr9x/preview" allow="autoplay"></iframe>
+            <iframe title="Contenido oculto 2" src="https://drive.google.com/file/d/17MkNrhDgliMcxQgWEkv-mMJnuDH69izU/preview" allow="autoplay"></iframe>
+            <iframe title="Contenido oculto 3" src="https://drive.google.com/file/d/1jylVtqw8PV4ajUPZJ0GeJ26LPMCVMNOr/preview" allow="autoplay"></iframe>
+        </div>
     </section>
 </main>
 <footer>
