--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -37,7 +37,7 @@
     </article>
     <article>
         <a href="https://es.wikipedia.org/wiki/Chernin_Entertainment" target="_blank">
-            <img src="../img/Chernin_Entertainment.svg" alt="Chernin Entertainment" class="prod">
+            <img src="../img/Frame 15.png" alt="Chernin Entertainment" class="prod">
         </a>
     </article>
 </section>
