--- a/pages/reparto.html
+++ b/pages/reparto.html
@@ -33,7 +33,7 @@
         <a href="https://es.wikipedia.org/wiki/Matt_Damon" target="_blank">
             <img src="../img/matt damon.jpg" alt="Matt Damon" class="mta">
         </a>
-        <h4>Matt Damon (Carroll Shelby)</h4>
+        <h4>Matt Damon <h3>(Carroll Shelby)</h3></h4>
         <p>Interpreta al ex piloto convertido en diseñador y constructor de autos. 
             Es quien lidera el proyecto del Ford GT40 y actúa como puente entre la empresa y el piloto Ken Miles.</p>
     </article>
@@ -41,7 +41,7 @@
         <a href="https://es.wikipedia.org/wiki/Christian_Bale" target="_blank">
            <img src="../img/christian_bale.jpg" alt="Christian Bale" class="mta"> 
         </a>
-        <h4>Christian Bale (Ken Miles)</h4>
+        <h4>Christian Bale <h3>(Ken Miles)</h3></h4>
         <p>Da vida al talentoso y temperamental piloto británico. Su carácter rebelde y su habilidad 
             al volante son fundamentales para llevar a Ford a competir contra Ferrari.</p>
     </article>
@@ -49,7 +49,7 @@
         <a href="https://es.wikipedia.org/wiki/Tracy_Letts" target="_blank">
             <img src="../img/tracy_letts.jpg" alt="Tracy Letts" class="mta">
         </a>
-        <h4>Tracy Letts (Henry Ford II)</h4>
+        <h4>Tracy Letts <h3>(Henry Ford II)</h3></h4>
         <p>Interpreta al nieto del fundador de Ford. Es el impulsor de la idea de desafiar a Ferrari en Le Mans 
             para revitalizar la imagen de su compañía.</p>
     </article>
@@ -57,7 +57,7 @@
         <a href="https://es.wikipedia.org/wiki/Remo_Girone" target="_blank">
             <img src="../img/remo_girone.jpg" alt="Remo Girone" class="mta">
         </a>
-        <h4>Remo Girone (Enzo Ferrari)</h4>
+        <h4>Remo Girone <h3>(Enzo Ferrari)</h3></h4>
         <p>Da vida al legendario fundador de Ferrari. Representa el rival a vencer: el símbolo de la excelencia y el orgullo
              italiano en el mundo del automovilismo.</p>
     </article>
@@ -65,7 +65,7 @@
         <a href="https://es.wikipedia.org/wiki/Caitriona_Balfe" target="_blank">
             <img src="../img/caitriona_balfe.jpg" alt="Caitriona Balfe" class="mta">
         </a>
-       <h4>Caitriona Balfe (Mollie Miles)</h4>
+       <h4>Caitriona Balfe <h3>(Mollie Miles)</h3></h4>
         <p>Encarna a la esposa de Ken Miles. Su papel muestra el costado humano de la historia, acompañando y apoyando a su marido en medio 
             de las tensiones y riesgos de las carreras.</p> 
     </article>
