--- a/404.html
+++ b/404.html
@@ -45,9 +45,10 @@
     </section>
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Final - Programacion Web</p>
 </footer>
 </body>
 
 </html>
+
 
