--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -51,7 +51,8 @@
 </div>
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Final - Programacion Web</p>
 </footer>
 </body>
+
 </html>
