--- a/pages/gracias.html
+++ b/pages/gracias.html
@@ -41,7 +41,7 @@
     </section>
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Final - Programacion Web</p>
 </footer>
 </body>
 
