--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -71,7 +71,7 @@
     </form>
 </main>
 <footer>
-    <p class="footer">Lucas Pereyra - Parcial 2 - Programacion Web</p>
+    <p class="footer">Lucas Pereyra - Final - Programacion Web</p>
 </footer>
 </body>
 
