--- a/pages/sinopsis.html
+++ b/pages/sinopsis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP2</title>
+    <title>Final</title>
     <link rel="stylesheet" href="../estilos/general.css">
     <link rel="stylesheet" href="../estilos/sinopsis.css">
     <link rel="icon" href="../img/favicon.png">
@@ -42,3 +42,4 @@
 </body>
 
 </html>
+
