--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP2</title>
+    <title>Final</title>
     <link rel="stylesheet" href="../estilos/general.css">
     <link rel="stylesheet" href="../estilos/produccion.css">
     <link rel="icon" href="../img/favicon.png">
@@ -56,3 +56,4 @@
 </body>
 
 </html>
+
